--- a/gift.html
+++ b/gift.html
@@ -43,6 +43,7 @@
             <div><a href="article/java/hashmap.html">HashMap源码分析</a></div>
             <div><a href="article/java/jdk8.html">jdk8 新特性</a></div>
             <div><a href="article/java/jvm.html">深入浅出JVM</a></div>
+            <div><a href="article/java/chatgpt.html">chatgpt-官方openai接口-如何实现连续对话-java版--附理论和node版参考源码</a></div>
         </div>
         <div>
             <h1>js</h1>
